styling for header and top done

--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -62,7 +62,7 @@ body {
   height: 44px;
   background-color: #333;
 }
-.top-bar .container {
+/* .top-bar .container {
   width: 100%;
   display: flex;
   justify-content: none;
@@ -76,7 +76,7 @@ body {
   .top-bar .container {
     width: 1280px;
   }
-}
+} */
 .top-bar .container .container-left {
   display: flex;
   justify-content: none;
@@ -120,7 +120,7 @@ body {
 .top-bar .container .container-right span {
   cursor: pointer;
 }
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -159,7 +159,7 @@ body {
   text-align: right;
   margin-right: 25px;
   flex: 1;
-}
+} */
 .content-container {
   display: flex; 
   flex-direction: column; 
